2012-12-07:
CME - changed as.rspec to work if user provides a 'whichwl' argument
CME - changed procspec to work with single reflectance spectrum
CME - added 'interp' argument to as.rspec and updated automatic search for wavelength column

2012-12-10:
CME - fixed aggspec.R (names of output dataset weren't matching input 'by' vector)