@@ -5,3 +5,7 @@ CME - added 'interp' argument to as.rspec and updated automatic search for wavel
 
 2012-12-10:
 CME - fixed aggspec.R (names of output dataset weren't matching input 'by' vector)
+
+2012-12-14:
+RM - fixed tcs (allows for "v" names in the cone classes)
+RM - changed voloverlap: allows user to define colors, and if new plot should be called
